# humbletrust

./: .gitignore  .vercelignore  Anchor.toml  CLAUDE.md  CONTEXT.md  CURSOR_PROMPT.md  DEVNET_MAINNET_READINESS.md  HUMBLETRUST_GLOBAL_SKILLS.md  HUMBLETRUST_V2_FINAL_SUMMARY.md  LICENSE  PHASES.md  README.md  SECURITY.md  humbletrust_security_txt_patch.py  humbletrust_security_txt_patch_v2.py  nft-reference-uniqueness.html  nft-reference.html  package-lock.json  package.json  pitch.html  vercel.json
.claude/commands/: engineering.md  marketing.md  remotion.md  solana-expert.md  stop-slop.md  super-audit.md  trade-chart-engine.md  uiux-promax.md
.github/workflows/: ci.yml
api/: new-pairs.js  package-lock.json  package.json  setup.js
api/_lib/: apiKey.js  curve-events.js  knownTokens.json  tokenFingerprint.js  trust.js  validate.js
api/badges/: [action].js  confirm.js  image.js  index.js  metadata.js  prepare.js  sold.js
api/cert/: [...path].js
api/keys/: index.js  me.js
api/reputation/: record.js
app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
backend/: .env.example  package-lock.json  package.json  tsconfig.json
design-reference/: README.md  index.html  package-lock.json  package.json  vite.config.ts
extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
pitch/: index.html
programs/humbletrust/: Cargo.toml
programs/humbletrust-v2/: Cargo.toml
programs/humbletrust-v2/src/: lib.rs
programs/humbletrust/src/: lib.rs  lib.rs.bak.1778416054  lib.rs.bak.phase3.1778419044  lib.rs.bak.restore.1778760343
scripts/: check-token-v2.mjs  diagnose-raydium.mjs  init-global-state-v2.mjs  make_nft.py
tests/: humbletrust.ts  humbletrust_v2.ts
web/: .env.example  .vercelignore  README.md  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+283 files in other folders)
