[package]
name = "humbletrust-v2"
version = "0.1.0"
description = "HumbleTrust v2 bonding curve launchpad"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "humbletrust_v2"

[features]
default = ["devnet"]
cpi = ["no-entrypoint"]
devnet = []
mainnet = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token"] }
solana-security-txt = "1.1.1"
