[package]
name = "humbletrust"
version = "0.1.0"
description = "HumbleTrust anti-rug launchpad"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "humbletrust"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token"] }
